fixes dark mode math

--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -348,3 +348,7 @@ mjx-container {
     margin-bottom: 20px;
   }
 }
+
+d-hover-box ul {
+  color: black;
+}
